--- a/server/liveblog/themes/themes_assets/simple/package.json
+++ b/server/liveblog/themes/themes_assets/simple/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog-simple-theme",
-  "version": "0.2.0",
+  "version": "0.2.3",
   "description": "Liveblog SEO Simple Theme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +9,7 @@
   "license": "AGPL-3.0",
   "main": "index.js",
   "dependencies": {
-    "liveblog-default-theme": "^3.5.1"
+    "liveblog-default-theme": "3.5.2"
   },
   "repository": {
     "type": "git",
