--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -14,3 +14,5 @@ pymongo>=0.4,<4.0
 -e git://github.com/superdesk/superdesk-core.git@v1.17.1#egg=Superdesk-Core
 
 redis>=2.10.5,<3.0
+elasticsearch==1.9.0
+kombu<4.3.0
