--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
   },
   "scripts": {
     "build": "grunt build",
-    "test": "grunt ci:travis",
-    "webdriver-update": "webdriver-manager update",
+    "eslint": "grunt eslint",
+    "tslint": "tsc --noEmit && tslint -c tslint.json 'app/**/*.{ts,tsx}'",
+    "lint": "npm run eslint && npm run tslint",
+    "webdriver-update": "webdriver-manager update --gecko false --versions.chrome=2.46 --versions.standalone=3.9.1",
     "e2e": "protractor protractor-conf.js"
   },
   "licenses": [
@@ -18,20 +20,17 @@
     }
   ],
   "devDependencies": {
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.3",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
+    "@types/angular": "^1.6.54",
+    "@typescript-eslint/eslint-plugin-tslint": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
     "bootstrap": "3.3.7",
     "btoa": "1.1.2",
     "classnames": "2.2.5",
     "css-loader": "0.28.7",
-    "eslint": "4.11.0",
-    "eslint-loader": "1.9.0",
+    "eslint": "^5.16.0",
     "eslint-plugin-angular": "3.1.1",
     "eslint-plugin-react": "^7.5.1",
+    "fork-ts-checker-webpack-plugin": "^0.5.2",
     "grunt": "1.0.1",
     "grunt-angular-gettext": "2.3.6",
     "grunt-angular-templates": "1.1.0",
@@ -43,7 +42,7 @@
     "grunt-contrib-less": "1.4.1",
     "grunt-contrib-uglify": "3.1.0",
     "grunt-contrib-watch": "1.0.0",
-    "grunt-eslint": "20.1.0",
+    "grunt-eslint": "^21.0.0",
     "grunt-filerev": "2.3.1",
     "grunt-jscs": "1.8.0",
     "grunt-karma": "2.0.0",
@@ -73,7 +72,10 @@
     "request": "^2.79.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
-    "superdesk-code-style": "^1.0.0",
+    "superdesk-code-style": "^1.2.0",
+    "ts-loader": "^3.5.0",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5",
     "webpack": "3.6.0",
     "webpack-dev-server": "2.8.2"
   },
@@ -91,6 +93,7 @@
     "angular-resource": "1.6.6",
     "angular-route": "1.6.9",
     "angular-vs-repeat": "1.1.7",
+    "eslint-loader": "^2.1.2",
     "eventable": "madebymany/eventable",
     "gridster": "0.5.6",
     "jquery": "3.3.1",
@@ -111,7 +114,8 @@
     "raven-js": "3.22.3",
     "sanitize-html": "^1.18.2",
     "sir-trevor": "liveblog/sir-trevor-js",
-    "superdesk-core": "github:eos87/superdesk-client-core#v1.17.0-liveblog"
+    "superdesk-core": "github:eos87/superdesk-client-core#v1.17.0-liveblog",
+    "superdesk-ui-framework": "^1.8.13"
   },
   "engines": {
     "node": ">=6.6.0 <7.0.0",
