--- a/client/package.json
+++ b/client/package.json
@@ -74,6 +74,7 @@
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
     "superdesk-code-style": "^1.0.0",
+    "superdesk-ui-framework": "^1.8.14",
     "webpack": "3.6.0",
     "webpack-dev-server": "2.8.2"
   },
