--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,9 @@
   ],
   "devDependencies": {
     "@types/angular": "^1.6.54",
+    "@types/bootstrap": "^3.3.42",
+    "@types/jquery": "^3.3.29",
+    "@types/react": "^16.8.18",
     "@typescript-eslint/eslint-plugin-tslint": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
     "bootstrap": "3.3.7",
@@ -67,8 +70,8 @@
     "node-sass": "4.9.0",
     "phantomjs": "^2.1.3",
     "protractor": "5.4.2",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "request": "^2.79.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
