--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@types/angular": "^1.6.54",
     "@types/bootstrap": "^3.3.42",
     "@types/jquery": "^3.3.29",
+    "@types/lodash": "^4.14.134",
     "@types/react": "^16.8.18",
     "@typescript-eslint/eslint-plugin-tslint": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
