--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,8 +10,8 @@
         "noUnusedLocals": true,
         "allowJs": true,
         "esModuleInterop": true,
-        "module": "commonjs",
-        "target": "es2015",
+        "moduleResolution": "node",
+        "target": "es5",
         "skipLibCheck": true,
         "lib": [
             "dom",
