--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,6 +12,7 @@ pymongo>=0.4,<4.0
 google-auth-oauthlib==0.2.0
 
 # Superdesk
+-e git://github.com/vstinner/hachoir.git@3.0a2#egg=hachoir3
 -e git://github.com/liveblog/superdesk-core.git@users-modify-command#egg=Superdesk-Core
 
 redis>=2.10.5,<3.0
