--- a/client/package.json
+++ b/client/package.json
@@ -116,6 +116,7 @@
     "ng-sir-trevor": "superdesk/ng-sir-trevor",
     "rangy": "1.3.0",
     "raven-js": "3.22.3",
+    "react-select": "^3.0.4",
     "sanitize-html": "^1.18.2",
     "sir-trevor": "liveblog/sir-trevor-js",
     "superdesk-core": "eos87/superdesk-client-core#v1.17.0-liveblog",
