--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -36,7 +36,7 @@
             "globalReturn": false,
             "impliedStrict": true,
             "jsx": true,
-            "experimentalObjectRestSpread": true
+            "ecmaVersion": 2018
         }
     },
 
