--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -17,6 +17,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Installing required services
+      run: sudo docker run --name mongo -d -p 27017:27017 mongo:3.4.23 
     - name: Install, build, and test
       run: |
         cd client/ && npm install
