--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -6,23 +6,22 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    env:
+      CI: true
+      SYNDICATION_VALIDATE_AUTH: 0
+      MAIL_SERVER: 'localhost'
+      MAIL_PORT: 2225
+      MAIL_USERNAME: __EMPTY__
+      MAIL_PASSWORD: __EMPTY__
+      MAIL_USE_TLS: 0
+      MAIL_USE_SSL: 0
+      MAIL_DEBUG: 1
+      MAIL_SUPPRESS_SEND: true
+      # Using travis encrypted keys didn't solve the issue with cross-forks Pull Requests
+      # So, we can use the test key taken from http://embed.ly/code site
+      EMBEDLY_KEY: fd92ebbc52fc43fb98f69e50e7893c13
 
-    strategy:
-      matrix:
-        node-version: [8.x, 10.x]
-
-    steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install, build, and test
-      run: |
-        cd client/ && npm install
-      env:
-        CI: true
-        
     services:
       nginx:
         image: mongo:3.4.23
@@ -31,8 +30,39 @@ jobs:
       redis:
         image: redis
         ports:
-          - 6379/tcp
+          - 6379:6379
       elasticsearch-1.7.2:
         image: barnybug/elasticsearch:1.7.2
         ports: 
-          - 9200/tcp
+          - 9200:9200
+
+    strategy:
+      matrix:
+        node-version: [8.x, 10.x]
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Setup Nodejs ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    
+    - name: Setup Python 3.5
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.5
+        architecture: x64
+
+    - name: Install Python dependencies and run tests
+      run: |
+        pip install -r dev-requirements.txt
+        nosetests --all-modules --nocapture
+        behave --format progress2 --logging-level ERROR 
+        flake8 
+      working-directory: ./server
+
+    - name: Install Nodejs dependencies, build, lint and test
+      run: |
+        npm install
+        npm run lint
+      working-directory: ./client
