--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -43,7 +43,7 @@
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
-        "plugin:jasmine/recommended"
+        "plugin:jasmine/recommended",
     ],
 
     "rules": {
