--- a/server/liveblog/themes/themes_assets/default/package.json
+++ b/server/liveblog/themes/themes_assets/default/package.json
@@ -14,6 +14,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^13.0.0",
+    "cookies-enabler": "^0.1.4",
     "del": "^2.2.0",
     "eslint": "^3.19.0",
     "graceful-fs": "^4.1.4",
@@ -44,6 +45,7 @@
     "liveblog-shared-tools": "eos87/liveblog-shared-tools",
     "lory.js": "^2.5.3",
     "moment": "^2.18.1",
+    "natives": "^1.1.6",
     "npm-exists": "^1.0.1",
     "nunjucks": "~3.0.1",
     "nunjucks-date-filter": "^0.1.1",
