--- a/server/liveblog/themes/themes_assets/default/package.json
+++ b/server/liveblog/themes/themes_assets/default/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog-default-theme",
-  "version": "3.5.18",
+  "version": "3.5.23",
   "description": "Liveblog 3 SEO theme",
   "author": "Paul Solbach <psolbach@dpa-newslab.com>, Massimo Scamarcia <massimo.scamarcia@sourcefabric.org>",
   "license": "AGPL-3.0",
@@ -14,7 +14,6 @@
     "babel-preset-stage-0": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^13.0.0",
-    "cookies-enabler": "^0.1.4",
     "del": "^2.2.0",
     "eslint": "^3.19.0",
     "graceful-fs": "^4.1.4",
@@ -42,6 +41,7 @@
     "gulp-watch": "^4.3.5",
     "iframe-resizer": "^3.5.14",
     "imagesloaded": "^4.1.4",
+    "js-cookie": "^2.2.1",
     "liveblog-shared-tools": "eos87/liveblog-shared-tools",
     "lory.js": "^2.5.3",
     "moment": "^2.18.1",
