--- a/client/package.json
+++ b/client/package.json
@@ -81,7 +81,7 @@
     "superdesk-ui-framework": "^1.8.14",
     "ts-loader": "^3.5.0",
     "tslint": "^5.16.0",
-    "typescript": "^3.4.5",
+    "typescript": "3.4.5",
     "webpack": "3.6.0",
     "webpack-dev-server": "2.8.2"
   },
