--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "@types/jquery": "^3.3.29",
     "@types/lodash": "^4.14.137",
     "@types/react": "^16.8.18",
-    "@types/react-select": "^3.0.2",
+    "@types/react-select": "3.0.9",
     "@typescript-eslint/eslint-plugin-tslint": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
     "bootstrap": "3.3.7",
