--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,7 @@ script:
     - python3 manage.py register_local_themes ;
     - python3 manage.py register_bloglist ;
     - cd $TRAVIS_BUILD_DIR/client
-    - npm run webdriver-update
+    - CHROMEDRIVER_VERSION=83.0.4103.39 npm run webdriver-update
     - npm run e2e
 
 after_script:
