--- a/client/package.json
+++ b/client/package.json
@@ -102,7 +102,7 @@
     "eslint-loader": "^2.1.2",
     "eventable": "madebymany/eventable",
     "gridster": "0.5.6",
-    "jquery": "3.5.0",
+    "jquery": "^3.5.1",
     "jquery-jcrop": "0.9.13",
     "jquery-ui": "components/jqueryui#1.11.4",
     "jquery.gridster": "dustmoo/gridster.js#c306335397816beceb74e4a176067baef34a0359",
