--- a/client/package.json
+++ b/client/package.json
@@ -90,7 +90,7 @@
     "angular": "1.6.9",
     "angular-animate": "1.6.1",
     "angular-contenteditable": "0.3.9",
-    "angular-embed": "superdesk/angular-embed#9894333",
+    "angular-embed": "eos87/angular-embed#LBSD-785-embedly-alternative",
     "angular-embedly": "Urigo/angular-embedly#0.0.8",
     "angular-gettext": "2.3.10",
     "angular-messages": "1.6.6",
