--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog-client",
-  "version": "3.8.1",
+  "version": "3.8.2-rc2",
   "repository": {
     "type": "git",
     "url": "git@github.com:liveblog/liveblog.git"
