--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,7 +13,7 @@ google-auth-oauthlib==0.2.0
 
 # Superdesk
 -e git://github.com/vstinner/hachoir.git@3.0a2#egg=hachoir3
--e git://github.com/liveblog/superdesk-core.git@users-modify-command#egg=Superdesk-Core
+-e git://github.com/liveblog/superdesk-core.git@liveblog-custom#egg=Superdesk-Core
 
 redis>=2.10.5,<3.0
 elasticsearch==1.9.0
