--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,7 +8,7 @@ Flask-S3==0.1.7
 html5lib==0.999999999
 beautifulsoup4==4.6.0
 flask_pymongo>=0.5.2,<1.0
-pymongo>=0.4,<4.0
+pymongo==3.11.2
 google-auth-oauthlib==0.2.0
 
 # Superdesk
