--- a/client/package.json
+++ b/client/package.json
@@ -116,6 +116,7 @@
     "moment-timezone": "0.5.14",
     "ng-file-upload": "12.2.13",
     "ng-sir-trevor": "superdesk/ng-sir-trevor",
+    "object-hash": "^2.1.1",
     "rangy": "1.3.0",
     "raven-js": "3.22.3",
     "react-select": "^3.0.4",
