--- a/client/package.json
+++ b/client/package.json
@@ -86,7 +86,7 @@
     "webpack-dev-server": "2.8.2"
   },
   "dependencies": {
-    "@atlaskit/datetime-picker": "^10.0.1",
+    "@atlaskit/datetime-picker": "10.0.6",
     "adblock-detect": "1.0.5",
     "angular": "1.6.9",
     "angular-animate": "1.6.1",
